--- a/Lab6 - CORS Client/index.html
+++ b/Lab6 - CORS Client/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
-        $.get('http://localhost:3000/api/grades/')
+        $.get('http://localhost:3000/tasks')
         .done(function(res){
             console.log(res);
         })
